My frist project webside

--- a/index.html
+++ b/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Md Moniruzzaman Tonoy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <header>
 
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">Moni<span class="Moni-ruzz-aman">RUZZ</span>aman</h3>
+            <ul>
+                <li><a class="dark-2" href="">Protfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-MT">M-Tonoy</button></a></li>
+            </ul>
+
+        </nav>
+        <div class="banner">
+            <div class="content">
+                <h4 class="mt-hi dark-2">Hi I am</h4>
+                <h1 class="Moniruzzaman">Md Moniruzzaman</h1>
+                <p class="mt-ditals">I am a computer specialist. I am now working as computer operator in open IT institute. I studied from Kendua Jaihari Spree Government High School. Now I am working on a special course "Web Design".</p>
+                <button class="btn-MT">downlode CV</button>
+                <button class="btn-MT">Contact</button>
+            </div>
+            <img class="mt-img" src="images/mt.png" alt="">
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
