--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header web-bg">
         <nav>
             <h3 class="nav-title">Moni<span class="Moni-ruzz-aman">RUZZ</span>aman</h3>
             <ul>
@@ -41,5 +41,34 @@
 
     </footer>
 </body>
+<main>
+    <section class="about web-bg">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-dis">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <div class="about-items">
+            <!-- .about-item*4>p.item-titles+p.items-dis -->
+            <div class="about-item">
+                <p class="item-titles">Name</p>
+                <p class="items-dis">Md Moniruzzaman</p>
+            </div>
+            <div class="about-item">
+                <p class="item-titles">Email</p>
+                <p class="items-dis">moniruzzaman2428@gmail.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-titles">Date of Birth</p>
+                <p class="items-dis">07 May 2007</p>
+            </div>
+            <div class="about-item">
+                <p class="item-titles">Form</p>
+                <p class="items-dis">Bangladesh</p>
+            </div>
+        
+        </div>
+        <h3 class="section-title">What I do</h3>
+        <h3 class="section-title">A summary of My Resume</h3>
+
+    </section>
+</main>
 
 </html>
