--- a/index.html
+++ b/index.html
@@ -65,9 +65,39 @@
             </div>
         
         </div>
-        <h3 class="section-title">What I do</h3>
-        <h3 class="section-title">A summary of My Resume</h3>
 
+    </section>
+    <!-- section step -2 -->
+    <section class="skill">
+        <h3 class="section-title text-center">What I do</h3>
+        <p class="section-dis text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        <div class="skill-father">
+            <!-- .skills*4>img+h4.skill-title+p.skill-dis -->
+            <div class="skills">
+                <img src="images/icons/js.png" alt="">
+                <h4 class="skill-title">Vanilla JavaScript</h4>
+                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skills">
+                <img src="images/icons/react.png" alt="">
+                <h4 class="skill-title">React</h4>
+                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skills">
+                <img src="images/icons/nodejs.png" alt="">
+                <h4 class="skill-title">Node.js</h4>
+                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skills">
+                <img src="images/icons/mongo.png" alt="">
+                <h4 class="skill-title">MongoDB</h4>
+                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+
+    </section>
+    <section>
+        <h3 class="section-title">What I do</h3>
     </section>
 </main>
 
