My frist project webside

--- a/index.html
+++ b/index.html
@@ -96,9 +96,59 @@
         </div>
 
     </section>
-    <section>
-        <h3 class="section-title">What I do</h3>
+    <!-- section step -3 -->
+    <section class="resume">
+        <h3 class="section-title text-center ">A summary of My Resume</h3>
+        <div class="resume-content">
+            <!-- .resume-colum*2>h2+.resume-col-ti+.experins*3>h4.sub-ti+h5.sub-ex-ti -->
+            <div class="resume-colum">
+                <h2 class="colom">My Education</h2>
+                <h3 class="resume-col-ti">Master in Computer Engineering</h3>
+                <div class="experins">
+                    <h4 class="sub-ti">Harvard University / 2015 - 2017</h4>
+                    <h5 class="sub-ex-ti">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h5>
+                </div>
+                <hr>
+                <div class="resume-col-ti">Master in Computer Engineering</div>
+                <div class="experins">
+                    <h4 class="sub-ti">Harvard University / 2015 - 2017</h4>
+                    <h5 class="sub-ex-ti">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h5>
+                </div>
+                <hr>
+                <div class="resume-col-ti">Master in Computer Engineering</div>
+                <div class="experins">
+                    <h4 class="sub-ti">Harvard University / 2015 - 2017</h4>
+                    <h5 class="sub-ex-ti">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h5>
+                </div>
+            </div>
+            <div class="resume-colum">
+                <h2 class="colom">My Experience</h2>
+                <div class="resume-col-ti">Master in Computer Engineering</div>
+                <div class="experins">
+                    <h4 class="sub-ti">Harvard University / 2015 - 2017</h4>
+                    <h5 class="sub-ex-ti">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h5>
+                <hr>
+                <div class="resume-col-ti">Master in Computer Engineering</div>
+                <div class="experins">
+                    <h4 class="sub-ti">Harvard University / 2015 - 2017</h4>
+                    <h5 class="sub-ex-ti">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h5>
+                <hr>
+                <div class="resume-col-ti">Master in Computer Engineering</div>
+                <div class="experins">
+                    <h4 class="sub-ti">Harvard University / 2015 - 2017</h4>
+                    <h5 class="sub-ex-ti">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h5>
+            </div>
+        </div>
     </section>
+    <div class="text-center Mttt">
+        <button class="btn-MT">Downlode CV</button>
+    </div> 
 </main>
 
 </html>
