--- a/index.html
+++ b/index.html
@@ -78,22 +78,23 @@
             <div class="skills">
                 <img src="images/icons/js.png" alt="">
                 <h4 class="skill-title">Vanilla JavaScript</h4>
-                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                <p class="skill-dis">HTML, JavaScript, JQuery, AngularJS, Bootstrap, Materialize, SASS, Moment.js, Java, Apache Tomcat, Git, Apache Subversion, Eclipse IDE …</p>
             </div>
             <div class="skills">
                 <img src="images/icons/react.png" alt="">
                 <h4 class="skill-title">React</h4>
-                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                <p class="skill-dis">Developed and maintained front-end features using React.js and Redux. Collaborated with designers to create responsive, mobile-first web applications.
+                    .</p>
             </div>
             <div class="skills">
                 <img src="images/icons/nodejs.png" alt="">
                 <h4 class="skill-title">Node.js</h4>
-                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                <p class="skill-dis">Highlight any specific achievements or contributions you made during internships or projects, especially those involving both React.js and Node.js.</p>
             </div>
             <div class="skills">
                 <img src="images/icons/mongo.png" alt="">
                 <h4 class="skill-title">MongoDB</h4>
-                <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                <p class="skill-dis">Implemented database schemas and managed data using MongoDB and MySQL.Wrote efficient queries and performed CRUD operations using MongoDB..</p>
             </div>
         </div>
 
@@ -158,9 +159,9 @@
             <h3 class="section-title">Lets Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="ancor">
-                <a href="https://www.facebook.com/profile.php?id=61556932484982"><img src="images/icons/facebook.png" alt=""></a>
-                <a href=""><img src="images/icons/twitter.png" alt=""></a>
-                <a href="https://www.instagram.com/moniruzzaman2428/"><img src="images/icons/insta.png" alt=""></a>
+                <a href="https://www.facebook.com/profile.php?id=61556932484982" target="_blank"><img src="images/icons/facebook.png" alt=""></a>
+                <a href="https://x.com/moniruzzaman_24" target="_blank"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com/moniruzzaman2428/" target="_blank"><img src="images/icons/insta.png" alt=""></a>
                 <a class="yt"><img src="" alt=""></a>
             </div>
         </div>
