--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <div class="content">
                 <h4 class="mt-hi dark-2">Hi I am</h4>
                 <h1 class="Moniruzzaman">Md Moniruzzaman</h1>
-                <p class="mt-ditals">I am a computer specialist. I am now working as computer operator in open IT institute. I studied from Kendua Jaihari Spree Government High School. Now I am working on a special course "Web Design".</p><br><br><br>
+                <p class="mt-ditals">I am a computer specialist. I am now working as computer operator in open IT institute. I studied from Kendua Joyhori Spri Government High School. Now I am working on a special course "Web Design".</p><br><br><br>
                 <div class="btn-margin">
                     <button class="btn-MT"> <i class="fa-solid fa-download"></i> downlode CV </button>
                 <button class="btn-MT"> <i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
               
             </div>
-            <img class="mt-img" src="images/mt.png" alt="">
+            <img class="mt-img" src="images/moniruzzaman.png" alt="">
         </div>
     </header>
     
