My frist project webside

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section>
     <!-- section step -3 -->
     <section class="resume">
-        <h3 class="section-title text-center ">A summary of My Resume</h3>
+        <h3 class="section-title text-center"><u>A summary of My Resume</u></h3>
         <div class="resume-content">
             <!-- .resume-colum*2>h2+.resume-col-ti+.experins*3>h4.sub-ti+h5.sub-ex-ti -->
             <div class="resume-colum">
@@ -163,7 +163,8 @@
                 <a href="https://www.facebook.com/profile.php?id=61556932484982" target="_blank"><img src="images/icons/facebook.png" alt=""></a>
                 <a href="https://x.com/moniruzzaman_24" target="_blank"><img src="images/icons/twitter.png" alt=""></a>
                 <a href="https://www.instagram.com/moniruzzaman2428/" target="_blank"><img src="images/icons/insta.png" alt=""></a>
-                <a class="yt"><img src="" alt=""></a>
+                <a class="yt" href="https://www.youtube.com/@moniruzzamam2428" target="_blank"><img src="images/icons/rsz_youtube.png" alt=""></a>
+                <a href="https://bd.linkedin.com/in/md-moniruzzaman-tonoy-7bb52b285" target="_blank"><img src="images/icons/Li.png" alt=""></a>
             </div>
         </div>
     
