My frist project webside

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section>
     <!-- section step -3 -->
     <section class="resume">
-        <h3 class="section-title text-center"><u>A summary of My Resume</u></h3>
+        <h3 class="section-title text-center">A summary of My Resume</h3> <hr>
         <div class="resume-content">
             <!-- .resume-colum*2>h2+.resume-col-ti+.experins*3>h4.sub-ti+h5.sub-ex-ti -->
             <div class="resume-colum">
@@ -174,7 +174,10 @@
             <input type="text" name="" id="" placeholder="Your Name">
             <input type="email" name="" id="" placeholder="Email">
             <textarea name="" id="" cols="30" rows="20" placeholder="Massage"></textarea>
-            <input class="btn-MT" type="button" value="Submit">
+            <div id="btn-submit">
+                <input class="btn-MT" type="button" value="Submit">
+            </div>
+            
            
         </form>
         </div>
