My frist project webside

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section>
     <!-- section step -3 -->
     <section class="resume">
-        <h3 class="section-title text-center">A summary of My Resume</h3> <hr>
+        <h3 class="section-title text-center"> ::----- A summary of My Resume -----::  </h3> <hr>
         <div class="resume-content">
             <!-- .resume-colum*2>h2+.resume-col-ti+.experins*3>h4.sub-ti+h5.sub-ex-ti -->
             <div class="resume-colum">
