My frist project webside

--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
         </div>
     </section>
     <div class="text-center Mttt">
-        <button class="btn-MT"> <i class="fa-solid fa-download"></i> Downlode CV</button>
+        <button class="btn-MT"></a> <span class="fa-solid fa-download"></span > <a href="images/rezation 2.pdf"> Downlode CV</a> </span> </button>
     </div> 
+    
 </main>
 <footer class="web-bg">
     <section class="footer-colom">
