My frist project webside

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1 class="Moniruzzaman">Md Moniruzzaman</h1>
                 <p class="mt-ditals">I am a computer specialist. I am now working as computer operator in open IT institute. I studied from Kendua Joyhori Spri Government High School. Now I am working on a special course "Web Design".</p><br><br><br>
                 <div class="btn-margin">
-                    <button class="btn-MT"> <i class="fa-solid fa-download"></i> downlode CV </button>
+                    <button class="btn-MT"> <i class="fa-solid fa-download"></i> <a href="images/MD Moniruzzaman.pdf">downlode CV</a> </button>
                 <button class="btn-MT"> <i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
               
@@ -151,7 +151,7 @@
         </div>
     </section>
     <div class="text-center Mttt">
-        <button class="btn-MT"></a> <span class="fa-solid fa-download"></span > <a href="images/rezation 2.pdf"> Downlode CV</a> </span> </button>
+        <button class="btn-MT"></a> <span class="fa-solid fa-download"></span > <a href="images/MD Moniruzzaman.pdf"> Downlode CV</a> </span> </button>
     </div> 
     
 </main>
