--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <h1 class="Moniruzzaman">Md Moniruzzaman</h1>
                 <p class="mt-ditals">I am a computer specialist. I am now working as computer operator in open IT institute. I studied from Kendua Joyhori Spri Government High School. Now I am working on a special course "Web Design".</p><br><br><br>
                 <div class="btn-margin">
-                    <button class="btn-MT"> <i class="fa-solid fa-download"></i> <a href="images/MD Moniruzzaman.pdf">downlode CV</a> </button>
-                <button class="btn-MT"> <i class="fa-solid fa-phone"></i> Contact</button>
+                    <button class="btn-MT"> <i class="fa-solid fa-download"></i> <a id="ididid" href="images/MD Moniruzzaman.pdf">downlode CV</a> </button>
+                <button class="btn-MT"> <i class="fa-solid fa-phone"></i><a id="ididid" href="#uncommon"> Contact</a></button>
                 </div>
               
             </div>
@@ -151,11 +151,11 @@
         </div>
     </section>
     <div class="text-center Mttt">
-        <button class="btn-MT"></a> <span class="fa-solid fa-download"></span > <a href="images/MD Moniruzzaman.pdf"> Downlode CV</a> </span> </button>
+        <button class="btn-MT"></a> <span class="fa-solid fa-download"></span > <a id="ididid" href="images/MD Moniruzzaman.pdf"> Downlode CV</a> </span> </button>
     </div> 
     
 </main>
-<footer class="web-bg">
+<footer class="web-bg" id="uncommon">
     <section class="footer-colom">
         <div>
             <h3 class="section-title">Lets Connect</h3>
@@ -172,8 +172,8 @@
          <div>
         <h3 class="section-title">Let’s Inbox me</h3>
         <form action="">
-            <input type="text" name="" id="" placeholder="Your Name">
-            <input type="email" name="" id="" placeholder="Email">
+            <input type="text" name="" id="" placeholder="Your Name" required>
+            <input type="email" name="" id="" placeholder="Email" required>
             <textarea name="" id="" cols="30" rows="20" placeholder="Massage"></textarea>
             <div id="btn-submit">
                 <input class="btn-MT" type="button" value="Submit">
