simple problem slove

--- a/index.html
+++ b/index.html
@@ -176,9 +176,12 @@
                 </div>
             </form>
             </div>
-    
         </section>
-        
+        <span class="All-right">
+            <br>
+            <hr>
+            <p>All right reserved @MD Moniruzzaman Tonoy/**</p> 
+        </span>
     </footer >
 </body>
 
